# demoicurate

./: .env  .gitignore  DRc.py  README.md  app.py  auth.py  delete_rev_files.sh  details.xlsx  env  gdsToJson.py  gdsToJson_optimized_azeem.py  jsonToGds.py  layer_routes.py  requirements.txt  sendEmails.py  subsDecorator.py  testing.py
verifire.command_line_14/: .gitmodules  Cargo.toml  README_Types.md  add_submodule.sh  build.sh
verifire.command_line_14/action/verifire.action.slice/: Cargo.toml  README.md
verifire.command_line_14/action/verifire.action.slice/tests/: slice_tests.rs
verifire.command_line_14/command_line/: Cargo.toml
verifire.command_line_14/command_line/src/: main.rs
verifire.command_line_14/command_line/src/action/: action_slice.rs  doc.rs  mod.rs
verifire.command_line_14/command_line/src/output/: doc.rs  mod.rs
verifire.command_line_14/command_line/src/task/: doc.rs  mod.rs  task_angle.rs  task_check_shape.rs  task_connectivity.rs  task_density.rs  task_enc_poly.rs  task_enc_rect.rs  task_exact_size.rs  task_extension.rs  task_filter.rs  task_lvs.rs  task_min_area.rs  task_min_max_width.rs  (+4 more)
verifire.command_line_14/lib/verifire.design_format/: Cargo.toml  README.md
verifire.command_line_14/lib/verifire.lib.foundation/: Cargo.toml  README.md
verifire.command_line_14/lib/verifire.rule_runner/: .gitignore  Cargo.toml  README.md
verifire.command_line_14/rule/verifire.rule.angle/: Cargo.toml
verifire.command_line_14/rule/verifire.rule.density/: Cargo.toml  README.md
verifire.command_line_14/rule/verifire.rule.enclosure_poly/: Cargo.toml  README.md
verifire.command_line_14/rule/verifire.rule.enclosure_rect/: Cargo.toml
verifire.command_line_14/rule/verifire.rule.exact_size/: Cargo.toml
verifire.command_line_14/rule/verifire.rule.extension/: Cargo.toml  README.md
verifire.command_line_14/rule/verifire.rule.filter/: .gitignore  Cargo.toml  README.md
verifire.command_line_14/rule/verifire.rule.lvs/: Cargo.toml  README.md
verifire.command_line_14/rule/verifire.rule.min_area/: Cargo.toml
verifire.command_line_14/rule/verifire.rule.min_max_width/: Cargo.toml
verifire.command_line_14/rule/verifire.rule.notch_error/: Cargo.toml
verifire.command_line_14/rule/verifire.rule.off_grid/: Cargo.toml
verifire.command_line_14/rule/verifire.rule.slit_length/: Cargo.toml  README.md
verifire.command_line_14/rule/verifire.rule.spacing/: Cargo.toml
verifire.command_line_14/test_runner/density/: run.sh  test_0.json
verifire.command_line_14/test_runner/extension/: test_0.json  test_0_out.json
verifire.command_line_14/test_runner/filter/: test_0.json  viewport.gds
verifire.command_line_14/test_runner/issue_0/: VRLogic.gds  VRLogic_flat.gds  test_0.json  test_1.json  test_2.json
verifire.command_line_14/test_runner/sahil/: DRC_deck.json  Highlight_DRC.py  run.sh  rveToPdf.py
verifire.command_line_14/test_runner/test_0/: test_0.gds  test_0.json  test_0.py
verifire.command_line_14/test_runner/test_1/: run.sh  test_1.json
verifire.command_line_14/test_runner/test_2/: run.sh  test_2.json  xr_gds_4_or.gds
verifire.command_line_14/test_runner/test_3/: run.sh  test_3.gds  test_3.json
verifire.command_line_14/test_runner/test_4/: 10t_cells.gds  run.sh  test_4_0.json  test_4_1.json
verifire.command_line_14/test_runner/test_5/: .gitignore  run.sh  test_5.json
verifire.command_line_14/test_runner/test_6/: run.sh  test_6_0.json  test_6_1.json  test_6_2.json
verifire.command_line_14/test_runner/test_7/: run.sh  testCell.gds  testCell.json  testCell_out.json  test_7_0.json
verifire.command_line_14/test_runner/viewport/: run.sh  test_0_no_filter.json  test_1_one_filter.json  test_2_combination.json
(+189 files in other folders)
