[package]
name = "command_line"
version = "0.1.0"
edition = "2021"

[dependencies]

foundation = { path = "../lib/verifire.lib.foundation" }
rule_runner = { path = "../lib/verifire.rule_runner" }
design_format = { path = "../lib/verifire.design_format" }

angle = { path = "../rule/verifire.rule.angle" }
density = { path = "../rule/verifire.rule.density" }
enclosure_rect = { path = "../rule/verifire.rule.enclosure_rect" }
exact_size = { path = "../rule/verifire.rule.exact_size" }
extension = { path = "../rule/verifire.rule.extension" }
filter = { path = "../rule/verifire.rule.filter" }
min_area = { path = "../rule/verifire.rule.min_area" }
min_max_width = { path = "../rule/verifire.rule.min_max_width" }
notch_error = { path = "../rule/verifire.rule.notch_error" }
off_grid = { path = "../rule/verifire.rule.off_grid" }
slit_length = { path = "../rule/verifire.rule.slit_length" }
spacing = { path = "../rule/verifire.rule.spacing" }
lvs = { path = "../rule/verifire.rule.lvs" }

slice = { path = "../action/verifire.action.slice" }

uuid = { version = "^1", features = ["v4", "serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
futures = "^0.3.30"
tokio = { version = "^1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
log = "^0.4"
env_logger = "^0.11"