[package]
name = "design_format"
version = "0.1.0"
edition = "2021"

[dependencies]
gds21 = "^0.2.0"
serde = { version = "^1.0.203", features = ["derive"] }

i_tree = "^0.8.2"
i_overlay = "=1.4.3"
#i_overlay = { path = "../../../../../iShape/iOverlay" }
#i_float = { path = "../../../../../iShape/iFloat" }
#i_shape = { path = "../../../../../iShape/iShape" }
#i_tree = { path = "../../../../../iShape/iTree" }

log = "^0.4.21"
serde_json = "^1.0.117"
